--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
     "react-lottie-player": "^1.5.0",
     "react-use-rect": "^2.0.4",
     "sass": "^1.56.0"
