--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/poppins": "^4.5.10",
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "framer-motion": "^7.0.0",
+    "lucide-react": "^0.102.0",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
