--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-lottie-player": "^1.5.0",
     "react-use-rect": "^2.0.4",
+    "react-zoom-pan-pinch": "^3.0.6",
     "sass": "^1.56.0",
     "zustand": "^4.1.4"
   },
